--- a/app/path.html
+++ b/app/path.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
     <title>Pathfinder</title>
   </head>
   <body>
