revamped chess board

--- a/app/path.html
+++ b/app/path.html
@@ -59,12 +59,93 @@
         <div class="grid-item">2</div>
         <div class="grid-item">1</div>
       </div>
-      <table class="chessBoard" id="chessBoard" align="center"></table>
+      <div id="table">
+        <div class="row">
+          <div class="column white"><div class="piece white rook"></div></div>
+          <div class="column black"><div class="piece white knight"></div></div>
+          <div class="column white"><div class="piece white bishop"></div></div>
+          <div class="column black"><div class="piece white king"></div></div>
+          <div class="column white"><div class="piece white queen"></div></div>
+          <div class="column black"><div class="piece white bishop"></div></div>
+          <div class="column white"><div class="piece white knight"></div></div>
+          <div class="column black"><div class="piece white rook"></div></div>
+        </div>
+        <div class="row">
+          <div class="column black"><div class="piece white pawn"></div></div>
+          <div class="column white"><div class="piece white pawn"></div></div>
+          <div class="column black"><div class="piece white pawn"></div></div>
+          <div class="column white"><div class="piece white pawn"></div></div>
+          <div class="column black"><div class="piece white pawn"></div></div>
+          <div class="column white"><div class="piece white pawn"></div></div>
+          <div class="column black"><div class="piece white pawn"></div></div>
+          <div class="column white"><div class="piece white pawn"></div></div>
+        </div>
+        <div class="row">
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+        </div>
+        <div class="row">
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+        </div>
+        <div class="row">
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+        </div>
+        <div class="row">
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+          <div class="column black"><div class="piece"></div></div>
+          <div class="column white"><div class="piece"></div></div>
+        </div>
+        <div class="row">
+          <div class="column white"><div class="piece black pawn"></div></div>
+          <div class="column black"><div class="piece black pawn"></div></div>
+          <div class="column white"><div class="piece black pawn"></div></div>
+          <div class="column black"><div class="piece black pawn"></div></div>
+          <div class="column white"><div class="piece black pawn"></div></div>
+          <div class="column black"><div class="piece black pawn"></div></div>
+          <div class="column white"><div class="piece black pawn"></div></div>
+          <div class="column black"><div class="piece black pawn"></div></div>
+        </div>
+        <div class="row">
+          <div class="column black"><div class="piece black rook"></div></div>
+          <div class="column white"><div class="piece black knight"></div></div>
+          <div class="column black"><div class="piece black bishop"></div></div>
+          <div class="column white"><div class="piece black king"></div></div>
+          <div class="column black"><div class="piece black queen"></div></div>
+          <div class="column white"><div class="piece black bishop"></div></div>
+          <div class="column black"><div class="piece black knight"></div></div>
+          <div class="column white"><div class="piece black rook"></div></div>
+        </div>
+      </div>
     </div>
-    <div id="position">
-    </div>
+    
+    <div id="position"></div>
   </body>
   <script src="renderer.js"></script>
   <script src="script.js"></script>
-  <script src="..\utils\moves.js"></script>
+  <script src="..\utils\board.js"></script>
 </html>
