--- a/app/path.html
+++ b/app/path.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
@@ -29,25 +26,23 @@
         </b>
     </div>
     <div class="reset">
-      <b id="reset_info">
-        <span>R</span>
-        <span>E</span>
-        <span>S</span>
-        <span>E</span>
-        <span>T</span>
-      </b>
+      <b id="reset_info">RESET</b>
       <button type="button" id="reset" class="btn btn-success"></button>
+    </div>
+    <div class="change">
+      <b id="change_info">BLACK</b>
+      <button type="button" id="change" class="btn btn-danger"></button>
     </div>
     <div class="board">
       <div class="grid-container-a" align="center">
-        <div class="grid-item">a</div>
-        <div class="grid-item">b</div>
-        <div class="grid-item">c</div>
-        <div class="grid-item">d</div>
-        <div class="grid-item">e</div>
-        <div class="grid-item">f</div>
-        <div class="grid-item">g</div>
-        <div class="grid-item">h</div>
+        <div class="grid-item">A</div>
+        <div class="grid-item">B</div>
+        <div class="grid-item">C</div>
+        <div class="grid-item">D</div>
+        <div class="grid-item">E</div>
+        <div class="grid-item">F</div>
+        <div class="grid-item">G</div>
+        <div class="grid-item">H</div>
       </div>
       <div class="grid-container-1" align="center">
         <div class="grid-item">8</div>
@@ -61,14 +56,14 @@
       </div>
       <div id="table">
         <div class="row">
-          <div class="column white"><div class="piece white rook"></div></div>
-          <div class="column black"><div class="piece white knight"></div></div>
-          <div class="column white"><div class="piece white bishop"></div></div>
-          <div class="column black"><div class="piece white king"></div></div>
-          <div class="column white"><div class="piece white queen"></div></div>
-          <div class="column black"><div class="piece white bishop"></div></div>
-          <div class="column white"><div class="piece white knight"></div></div>
-          <div class="column black"><div class="piece white rook"></div></div>
+          <div class="column white"><div class="piece white rook" draggable="true"></div></div>
+          <div class="column black"><div class="piece white knight" draggable="true"></div></div>
+          <div class="column white"><div class="piece white bishop" draggable="true"></div></div>
+          <div class="column black"><div class="piece white king" draggable="true"></div></div>
+          <div class="column white"><div class="piece white queen" draggable="true"></div></div>
+          <div class="column black"><div class="piece white bishop" draggable="true"></div></div>
+          <div class="column white"><div class="piece white knight" draggable="true"></div></div>
+          <div class="column black"><div class="piece white rook" draggable="true"></div></div>
         </div>
         <div class="row">
           <div class="column black"><div class="piece white pawn"></div></div>
@@ -131,14 +126,14 @@
           <div class="column black"><div class="piece black pawn"></div></div>
         </div>
         <div class="row">
-          <div class="column black"><div class="piece black rook"></div></div>
-          <div class="column white"><div class="piece black knight"></div></div>
-          <div class="column black"><div class="piece black bishop"></div></div>
-          <div class="column white"><div class="piece black king"></div></div>
-          <div class="column black"><div class="piece black queen"></div></div>
-          <div class="column white"><div class="piece black bishop"></div></div>
-          <div class="column black"><div class="piece black knight"></div></div>
-          <div class="column white"><div class="piece black rook"></div></div>
+          <div class="column black"><div class="piece black rook" draggable="true"></div></div>
+          <div class="column white"><div class="piece black knight" draggable="true"></div></div>
+          <div class="column black"><div class="piece black bishop" draggable="true"></div></div>
+          <div class="column white"><div class="piece black king" draggable="true"></div></div>
+          <div class="column black"><div class="piece black queen" draggable="true"></div></div>
+          <div class="column white"><div class="piece black bishop" draggable="true"></div></div>
+          <div class="column black"><div class="piece black knight" draggable="true"></div></div>
+          <div class="column white"><div class="piece black rook" draggable="true"></div></div>
         </div>
       </div>
     </div>
@@ -147,5 +142,5 @@
   </body>
   <script src="renderer.js"></script>
   <script src="script.js"></script>
-  <script src="..\utils\board.js"></script>
+  <script src="../utils/board.js"></script>
 </html>
