--- a/app/path.html
+++ b/app/path.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
+    crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
@@ -56,14 +58,14 @@
       </div>
       <div id="table">
         <div class="row">
-          <div class="column white"><div class="piece white rook" draggable="true"></div></div>
-          <div class="column black"><div class="piece white knight" draggable="true"></div></div>
-          <div class="column white"><div class="piece white bishop" draggable="true"></div></div>
-          <div class="column black"><div class="piece white king" draggable="true"></div></div>
-          <div class="column white"><div class="piece white queen" draggable="true"></div></div>
-          <div class="column black"><div class="piece white bishop" draggable="true"></div></div>
-          <div class="column white"><div class="piece white knight" draggable="true"></div></div>
-          <div class="column black"><div class="piece white rook" draggable="true"></div></div>
+          <div class="column white"><div class="piece white rook"></div></div>
+          <div class="column black"><div class="piece white knight"></div></div>
+          <div class="column white"><div class="piece white bishop"></div></div>
+          <div class="column black"><div class="piece white king"></div></div>
+          <div class="column white"><div class="piece white queen"></div></div>
+          <div class="column black"><div class="piece white bishop"></div></div>
+          <div class="column white"><div class="piece white knight"></div></div>
+          <div class="column black"><div class="piece white rook"></div></div>
         </div>
         <div class="row">
           <div class="column black"><div class="piece white pawn"></div></div>
@@ -126,19 +128,23 @@
           <div class="column black"><div class="piece black pawn"></div></div>
         </div>
         <div class="row">
-          <div class="column black"><div class="piece black rook" draggable="true"></div></div>
-          <div class="column white"><div class="piece black knight" draggable="true"></div></div>
-          <div class="column black"><div class="piece black bishop" draggable="true"></div></div>
-          <div class="column white"><div class="piece black king" draggable="true"></div></div>
-          <div class="column black"><div class="piece black queen" draggable="true"></div></div>
-          <div class="column white"><div class="piece black bishop" draggable="true"></div></div>
-          <div class="column black"><div class="piece black knight" draggable="true"></div></div>
-          <div class="column white"><div class="piece black rook" draggable="true"></div></div>
+          <div class="column black"><div class="piece black rook"></div></div>
+          <div class="column white"><div class="piece black knight"></div></div>
+          <div class="column black"><div class="piece black bishop"></div></div>
+          <div class="column white"><div class="piece black king"></div></div>
+          <div class="column black"><div class="piece black queen"></div></div>
+          <div class="column white"><div class="piece black bishop"></div></div>
+          <div class="column black"><div class="piece black knight"></div></div>
+          <div class="column white"><div class="piece black rook"></div></div>
         </div>
       </div>
     </div>
     
     <div id="position"></div>
+
+    <div id="credit">
+      <p>Made with  &#128156; by Arighna Chakraborty</p>
+    </div>
   </body>
   <script src="renderer.js"></script>
   <script src="script.js"></script>
