--- a/app/path.html
+++ b/app/path.html
@@ -1,154 +1,286 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
-    crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-    <script>if (window.module) module = window.module;</script>
-    <title>Pathfinder</title>
-  </head>
-  <body>
-    <div id="title__bar" style="-webkit-app-region: drag">
-        <img id="logo" src="../assets/chess.png" alt="Logo">
-        <button type="button" class="btn btn-outline-danger" id="cls"></button>
-        <button type="button" class="btn btn-outline-info" id="min"></button>
-        <input type="checkbox" id="switch" name="theme" /><label for="switch" id="set">
-          <button type="button"
-          class="btn btn-outline-info"  value="set"></button></label>
-        <b id="app__title">
-          <span>C</span>
-          <span>H</span>
-          <span>E</span>
-          <span>S</span>
-          <span>S</span>
-        </b>
-    </div>
-    <div class="reset">
-      <b id="reset_info">RESET</b>
-      <button type="button" id="reset" class="btn btn-success"></button>
-    </div>
-    <div class="change">
-      <b id="change_info">BLACK</b>
-      <button type="button" id="change" class="btn btn-danger"></button>
-    </div>
-    <div class="board">
-      <div class="grid-container-a" align="center">
-        <div class="grid-item">A</div>
-        <div class="grid-item">B</div>
-        <div class="grid-item">C</div>
-        <div class="grid-item">D</div>
-        <div class="grid-item">E</div>
-        <div class="grid-item">F</div>
-        <div class="grid-item">G</div>
-        <div class="grid-item">H</div>
-      </div>
-      <div class="grid-container-1" align="center">
-        <div class="grid-item">8</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">1</div>
-      </div>
-      <div id="table">
-        <div class="row">
-          <div class="column white"><div class="piece white rook"></div></div>
-          <div class="column black"><div class="piece white knight"></div></div>
-          <div class="column white"><div class="piece white bishop"></div></div>
-          <div class="column black"><div class="piece white king"></div></div>
-          <div class="column white"><div class="piece white queen"></div></div>
-          <div class="column black"><div class="piece white bishop"></div></div>
-          <div class="column white"><div class="piece white knight"></div></div>
-          <div class="column black"><div class="piece white rook"></div></div>
-        </div>
-        <div class="row">
-          <div class="column black"><div class="piece white pawn"></div></div>
-          <div class="column white"><div class="piece white pawn"></div></div>
-          <div class="column black"><div class="piece white pawn"></div></div>
-          <div class="column white"><div class="piece white pawn"></div></div>
-          <div class="column black"><div class="piece white pawn"></div></div>
-          <div class="column white"><div class="piece white pawn"></div></div>
-          <div class="column black"><div class="piece white pawn"></div></div>
-          <div class="column white"><div class="piece white pawn"></div></div>
-        </div>
-        <div class="row">
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-        </div>
-        <div class="row">
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-        </div>
-        <div class="row">
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-        </div>
-        <div class="row">
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-          <div class="column black"><div class="piece"></div></div>
-          <div class="column white"><div class="piece"></div></div>
-        </div>
-        <div class="row">
-          <div class="column white"><div class="piece black pawn"></div></div>
-          <div class="column black"><div class="piece black pawn"></div></div>
-          <div class="column white"><div class="piece black pawn"></div></div>
-          <div class="column black"><div class="piece black pawn"></div></div>
-          <div class="column white"><div class="piece black pawn"></div></div>
-          <div class="column black"><div class="piece black pawn"></div></div>
-          <div class="column white"><div class="piece black pawn"></div></div>
-          <div class="column black"><div class="piece black pawn"></div></div>
-        </div>
-        <div class="row">
-          <div class="column black"><div class="piece black rook"></div></div>
-          <div class="column white"><div class="piece black knight"></div></div>
-          <div class="column black"><div class="piece black bishop"></div></div>
-          <div class="column white"><div class="piece black king"></div></div>
-          <div class="column black"><div class="piece black queen"></div></div>
-          <div class="column white"><div class="piece black bishop"></div></div>
-          <div class="column black"><div class="piece black knight"></div></div>
-          <div class="column white"><div class="piece black rook"></div></div>
-        </div>
-      </div>
-    </div>
-    
-    <div id="position"></div>
 
-    <div id="credit">
-      <p>Made with  &#128156; by Arighna Chakraborty</p>
+<head>
+  <meta charset="utf-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
+  <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+    integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+  <script>if (window.module) module = window.module;</script>
+  <title>Pathfinder</title>
+</head>
+
+<body>
+  <div id="title__bar" style="-webkit-app-region: drag">
+    <img id="logo" src="../assets/chess.png" alt="Logo">
+    <button type="button" class="btn btn-outline-danger" id="cls"></button>
+    <button type="button" class="btn btn-outline-info" id="min"></button>
+    <input type="checkbox" id="switch" name="theme" /><label for="switch" id="set">
+      <button type="button" class="btn btn-outline-info" value="set"></button></label>
+    <b id="app__title">
+      <span>C</span>
+      <span>H</span>
+      <span>E</span>
+      <span>S</span>
+      <span>S</span>
+    </b>
+  </div>
+  <div class="reset">
+    <b id="reset_info">RESET</b>
+    <button type="button" id="reset" class="btn btn-success"></button>
+  </div>
+  <div class="change">
+    <b id="change_info">BLACK</b>
+    <button type="button" id="change" class="btn btn-danger"></button>
+  </div>
+  <div class="board">
+    <div class="grid-container-a" align="center">
+      <div class="grid-item">A</div>
+      <div class="grid-item">B</div>
+      <div class="grid-item">C</div>
+      <div class="grid-item">D</div>
+      <div class="grid-item">E</div>
+      <div class="grid-item">F</div>
+      <div class="grid-item">G</div>
+      <div class="grid-item">H</div>
     </div>
-  </body>
-  <script src="script.js"></script>
-  <script src="board.js"></script>
+    <div class="grid-container-1" align="center">
+      <div class="grid-item">8</div>
+      <div class="grid-item">7</div>
+      <div class="grid-item">6</div>
+      <div class="grid-item">5</div>
+      <div class="grid-item">4</div>
+      <div class="grid-item">3</div>
+      <div class="grid-item">2</div>
+      <div class="grid-item">1</div>
+    </div>
+    <div id="table">
+      <div class="row">
+        <div class="column white">
+          <div class="piece white rook"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white knight"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white bishop"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white king"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white queen"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white bishop"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white knight"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white rook"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column black">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece white pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece white pawn"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+        <div class="column black">
+          <div class="piece"></div>
+        </div>
+        <div class="column white">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column white">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black pawn"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black pawn"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column black">
+          <div class="piece black rook"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black knight"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black bishop"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black king"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black queen"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black bishop"></div>
+        </div>
+        <div class="column black">
+          <div class="piece black knight"></div>
+        </div>
+        <div class="column white">
+          <div class="piece black rook"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="position"></div>
+
+  <div id="credit">
+    <p>Made with &#128156; by Arighna Chakraborty</p>
+  </div>
+</body>
+<script src="script.js"></script>
+<script src="../scripts/def.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/board.js"></script>
 </html>
