--- a/app/index.html
+++ b/app/index.html
@@ -1,84 +1,117 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script>
+      if (typeof module === "object") {
+        window.module = module;
+        module = undefined;
+      }
+    </script>
+    <script>
+      if (window.module) module = window.module;
+    </script>
+    <title>Pathfinder</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/index.css">
-  <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
-  <script>if (window.module) module = window.module;</script>
-  <title>Pathfinder</title>
-</head>
+  <body>
+    <div class="title-bar" style="-webkit-app-region: drag">
+      <div>
+        <img src="assets/chess.png" alt="Logo" id="app-logo" />
+        <b id="app-title">
+          <span>C</span>
+          <span>H</span>
+          <span>E</span>
+          <span>S</span>
+          <span>S</span>
+        </b>
+      </div>
+      <div id="app-controls">
+        <input type="checkbox" id="switch" name="theme" /><label
+          for="switch"
+          id="set"
+        >
+          <button
+            type="button"
+            class="btn btn-outline-info"
+            value="set"
+          ></button>
+        </label>
+        <button type="button" class="btn btn-outline-info" id="min"></button>
+        <button type="button" class="btn btn-outline-danger" id="cls"></button>
+      </div>
+    </div>
 
-<body>
-  <div id="title__bar" style="-webkit-app-region: drag">
-    <img id="logo" src="assets/chess.png" alt="Logo">
-    <button type="button" class="btn btn-outline-danger" id="cls"></button>
-    <button type="button" class="btn btn-outline-info" id="min"></button>
-    <input type="checkbox" id="switch" name="theme" /><label for="switch" id="set">
-      <button type="button" class="btn btn-outline-info" value="set"></button></label>
-    <b id="app__title">
-      <span>C</span>
-      <span>H</span>
-      <span>E</span>
-      <span>S</span>
-      <span>S</span>
-    </b>
-  </div>
-  <div id="FenInDiv">			
-			<input type="text" id="fenIn"/>		
-			<button type="button" id="SetFen">Set Position</button>	
-		</div>	
-		<div id="ThinkingImageDiv">	
-			
-		</div>
-		<div id="Board">
-		</div>
-		<div id="CurrentFenDiv">
-			<span id="currentFenSpan"></span>		
-		</div>	
-		<span id="LoadingBook">Loading book, please wait....</span><br/>
-		<div id="EngineOutput">Thinking Time: <br/>
-			<select id="ThinkTimeChoice">
-			  <option value="1">1s</option>
-			  <option value="2">2s</option>
-			  <option value="4">4s</option>
-			  <option value="6">6s</option>
-			  <option value="8">8s</option>
-			  <option value="10">10s</option>
-			</select><br/><br/><br/>
-	
-			<span id="BestOut">BestMove:</span><br/>
-			<span id="DepthOut">Depth:</span><br/>
-			<span id="ScoreOut">Score:</span><br/>
-			<span id="NodesOut">Nodes:</span><br/>
-			<span id="OrderingOut">Ordering:</span><br/>
-			<span id="TimeOut">Time:</span><br/><br/>
-			<button type="button" id="SearchButton">Move Now</button><br/>
-			<button type="button" id="NewGameButton">New Game</button><br/>
-			<button type="button" id="FlipButton">Flip Board</button><br/><br/>
-			<button type="button" id="TakeButton">Take Back</button><br/><br/><br/>
-			<span id="GameStatus"></span>
-		</div>
-  <div id="credit">
-    <p>Made with &#128156; by Arighna Chakraborty</p>
-  </div>
-</body>
-<script src="script.js"></script>
-<script src="../utils/jquery.js"></script>
-<script src="../scripts/def.js"></script>
-<script src="../scripts/io.js"></script>
-<script src="../scripts/board.js"></script>
-<script src="../scripts/movegen.js"></script>
-<script src="../scripts/makemove.js"></script>
-<script src="../scripts/perft.js"></script>
-<script src="../scripts/evaluate.js"></script>
-<script src="../scripts/pvtable.js"></script>
-<script src="../scripts/search.js"></script>
-<script src="../scripts/protocol.js"></script>
-<script src="../scripts/gui.js"></script>
-<script src="../scripts/main.js"></script>
+    <div class="app-container">
+      <div id="FenInDiv">
+        <input type="text" id="fenIn" />
+        <button type="button" id="SetFen">Set Position</button>
+      </div>
+      <div id="app-view">
+        <div id="Board"></div>
+
+        <div id="app-stats">
+          <div id="EngineOutput">
+            <div id="thinking">
+              <div id="ThinkingImageDiv"></div>
+              <span>Difficulty: </span>
+              <select id="ThinkTimeChoice">
+                <option value="1">You Play, I'm Busy</option>
+                <option value="2">Fine I'll touch the Board</option>
+                <option value="4">I'm Interested</option>
+                <option value="6">Let's Play</option>
+                <option value="8">Can you keep Up ?</option>
+                <option value="10">Champion Mode ON !</option>
+              </select>
+            </div>
+            <span id="BestOut">BestMove:</span><br />
+            <span id="DepthOut">Depth:</span><br />
+            <span id="ScoreOut">Score:</span><br />
+            <span id="NodesOut">Nodes:</span><br />
+            <span id="OrderingOut">Ordering:</span><br />
+            <span id="TimeOut">Time:</span><br /><br />
+
+            <div class="game-buttons">
+              <button type="button" id="NewGameButton">New Game</button>
+              <button type="button" id="FlipButton">Flip Sides</button>
+              <button type="button" id="SearchButton">Automate Moves</button>
+              <button type="button" id="TakeButton">Undo Move</button>
+            </div>
+
+            <span id="GameStatus"></span>
+          </div>
+        </div>
+      </div>
+
+      <div id="CurrentFenDiv">
+        <p id="current-fen-title">Current Fen Code</p>
+        <span id="currentFenSpan"></span>
+      </div>
+
+      <div id="credit">
+        <p>Made with &#128156; by Arighna Chakraborty</p>
+      </div>
+    </div>
+  </body>
+  <script src="script.js"></script>
+  <script src="../utils/jquery.js"></script>
+  <script src="../scripts/def.js"></script>
+  <script src="../scripts/io.js"></script>
+  <script src="../scripts/color.js"></script>
+  <script src="../scripts/board.js"></script>
+  <script src="../scripts/movegen.js"></script>
+  <script src="../scripts/makemove.js"></script>
+  <script src="../scripts/perft.js"></script>
+  <script src="../scripts/evaluate.js"></script>
+  <script src="../scripts/pvtable.js"></script>
+  <script src="../scripts/search.js"></script>
+  <script src="../scripts/protocol.js"></script>
+  <script src="../scripts/gui.js"></script>
+  <script src="../scripts/main.js"></script>
 </html>
